/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "OperatorMessage";

message ConnectionDto {
    optional string input = 1;
    required string operator = 2;
    optional string output = 3;
}

message MetadataItem {
    required string key = 1;
    oneof value {
	bool booleanValue = 2;
	sint32 intValue = 3;
	sint64 longValue = 4;
	float floatValue = 5;
	double doubleValue = 6;
	string stringValue = 7;
	bytes blobValue = 8;
    }
}

message OperatorDto {
    enum Operation {
        CREATECONFIGURE = 0;
        REMOVE = 1;
    }

    required string name = 1;
    required string type = 2;
    required Operation operation = 3;
    optional bytes config = 4;
    repeated ConnectionDto connections = 5;
    repeated MetadataItem metadata = 6;
}
